Fix SimpleNav not centered due to ul.inline-list
SimpleNav wasn't being centered because of ul.inline-list display:inline-block so need to make the parent container text-align:center to  be able to center the inline-block.

The Left and Right align options still work with this fix.

--- a/sections/simple_nav/style.less
+++ b/sections/simple_nav/style.less
@@ -1,5 +1,6 @@
-.section-simple_nav .pl-section-pad{
+.section-simple_nav .pl-section-pad {
 	padding: 15px 0;
+	text-align: center;
 }
 .simplenav {
 	text-align: center;
